Fixed bug #30175 (SOAP results aren't parsed correctly)